Fixed viewport issues
Slight horizontal scroll caused problems thanks to the vertical scroll bar,

--- a/src/components/history.css
+++ b/src/components/history.css
@@ -1,6 +1,6 @@
 .history-div {
     width: 100vw;
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
 
     display: flex;
@@ -69,11 +69,6 @@
     margin-top: 0.5em;
     color: #791dd0;
     font-size: 0.8rem;
-}
-
-.left-aligned-div {
-    text-align: left;
-    width: 100%;
 }
 
 h2 {
